--- a/data/dao/pom.xml
+++ b/data/dao/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.bazaarvoice.commons.data</groupId>
             <artifactId>data-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!-- Commons -->
