--- a/data/dao/pom.xml
+++ b/data/dao/pom.xml
@@ -11,13 +11,13 @@
     </parent>
 
     <artifactId>data-dao</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Bazaarvoice Commons Data DAO</name>
 
     <scm>
-        <connection>scm:svn:https://dev.bazaarvoice.com/svn/bvc/commons/tags/data-dao-1.1</connection>
+        <connection>scm:svn:https://dev.bazaarvoice.com/svn/bvc/commons/trunk/data/dao</connection>
     </scm>
 
     <properties>
