--- a/data/dao/pom.xml
+++ b/data/dao/pom.xml
@@ -17,7 +17,7 @@
     <name>Bazaarvoice Commons Data DAO</name>
 
     <scm>
-        <connection>scm:svn:https://dev.bazaarvoice.com/svn/bvc/commons/trunk/data/dao</connection>
+      <connection>scm:git@github.com:bazaarvoice/commons-data-dao</connection>
     </scm>
 
     <properties>
