--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,23 +20,12 @@
     <properties>
         <springframework.version>4.2.0.RELEASE</springframework.version>
         <gwt.version>2.6.0</gwt.version>
+        <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
 
     <dependencyManagement>
         <dependencies>
-            <!-- Bazaarvoice -->
-            <!--<dependency>-->
-                <!--<groupId>com.bazaarvoice.support</groupId>-->
-                <!--<artifactId>support-annotations</artifactId>-->
-                <!--<version>3.1</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>com.bazaarvoice.support</groupId>-->
-                <!--<artifactId>support-utils</artifactId>-->
-                <!--<version>3.20</version>-->
-            <!--</dependency>-->
-
             <!-- Spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -127,7 +116,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>2.18.1</version>
                 </plugin>
 
                 <plugin>
