--- a/mongodao/pom.xml
+++ b/mongodao/pom.xml
@@ -28,15 +28,14 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Metrics -->
         <dependency>
-            <groupId>com.yammer.metrics</groupId>
+            <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>2.2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.yammer.metrics</groupId>
+            <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-annotation</artifactId>
-            <version>2.2.0</version>
         </dependency>
 
         <!-- Spring -->
