--- a/mongodao/pom.xml
+++ b/mongodao/pom.xml
@@ -51,7 +51,7 @@
         <!-- Data -->
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
+            <artifactId>mongodb-driver-legacy</artifactId>
         </dependency>
 
         <!-- Commons -->
