--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.bazaarvoice.commons</groupId>
         <artifactId>bv-opensource-super-pom</artifactId>
-        <version>1.4</version>
+        <version>1.12</version>
         <relativePath />
     </parent>
 
@@ -18,6 +18,8 @@
     <name>Bazaarvoice Commons Data DAO Parent</name>
 
     <properties>
+        <nexus.autoReleaseAfterClose>true</nexus.autoReleaseAfterClose>
+
         <springframework.version>4.3.13.RELEASE</springframework.version>
         <metrics.version>3.2.5</metrics.version>
         <gwt.version>2.8.2</gwt.version>
@@ -129,13 +131,11 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.20.1</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
                 </plugin>
 
                 <plugin>
@@ -144,6 +144,18 @@
                     <configuration>
                         <source>8</source>
                         <target>8</target>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.13</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>sonatype-nexus-staging</serverId>
+                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>${nexus.autoReleaseAfterClose}</autoReleaseAfterClose>
                     </configuration>
                 </plugin>
             </plugins>
