--- a/model/pom.xml
+++ b/model/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.bazaarvoice.commons.data</groupId>
         <artifactId>data-parent</artifactId>
-        <version>4.5</version>
+        <version>4.5-SNAPSHOT</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
